test/corpus/div-mod-quot-rem.txt
==================
Div quot mod rem
==================

[
  [5 // 3, 5 // -3, -5 // 3, -5 // -3],
  [5 % 3, 5 % -3, -5 % 3, -5 % -3],
  [
    5 |quot| 3,
    5 |quot| -3,
    -5 |quot| 3,
    -5 |quot| -3
  ],
  [5 |rem| 3, 5 |rem| -3, -5 |rem| 3, -5 |rem| -3]
]

---

    (source_file
      (program
        (list_non_empty
          (list_non_empty
            (binary_app
              (integer)
              (operator)
              (integer))
            (binary_app
              (integer)
              (operator)
              (integer))
            (binary_app
              (integer)
              (operator)
              (integer))
            (binary_app
              (integer)
              (operator)
              (integer)))
          (list_non_empty
            (binary_app
              (integer)
              (operator)
              (integer))
            (binary_app
              (integer)
              (operator)
              (integer))
            (binary_app
              (integer)
              (operator)
              (integer))
            (binary_app
              (integer)
              (operator)
              (integer)))
          (list_non_empty
            (binary_app
              (integer)
              (operator
                (var))
              (integer))
            (binary_app
              (integer)
              (operator
                (var))
              (integer))
            (binary_app
              (integer)
              (operator
                (var))
              (integer))
            (binary_app
              (integer)
              (operator
                (var))
              (integer)))
          (list_non_empty
            (binary_app
              (integer)
              (operator
                (var))
              (integer))
            (binary_app
              (integer)
              (operator
                (var))
              (integer))
            (binary_app
              (integer)
              (operator
                (var))
              (integer))
            (binary_app
              (integer)
              (operator
                (var))
              (integer))))))
